--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <h1>Video star | V8.3.2</h1>
     <span>pro</span>
   </div>
-  <div class="get"><a style="background: green;" href="#">GET</a></div>
+  <div class="get"><a style="background: green;" href="https://is.gd/Cydiainfovideostar">GET</a></div>
 </li>
 <li class="li">
   <img src="img/Inshot.png">
