--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h1>Video Star | V8.3.2</h1>
     <span>Premium</span>
   </div>
-  <div class="get"><a style="background: green;" href="https://is.gd/Cydiainfovideostar">GET</a></div>
+  <div class="get"><a style="background: red;" href="https://is.gd/Cydiainfovideostar">GET</a></div>
 </li>
 <li class="li">
   <img src="https://app.kurd-source.com/img/Uncover.png">
