--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h1>Video star | V11.2.8</h1>
     <span>pro</span>
   </div>
-  <div class="get"><a style="background: green;" href="itms-services://?action=download-manifest&url=Cydiainfo.tk/videostar.plist">GET</a></div>
+  <div class="get"><a style="background: red;" href="itms-services://?action=download-manifest&url=Cydiainfo.tk/videostar.plist">GET</a></div>
 </li>
 <li class="li">
   <img src="img/Inshot.png">
