--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <h1>Unc0ver | v8.0.2</h1>
     <span>jailbreak</span>
   </div>
-  <div class="get"><a style="background: red;"href="https://is.gd/Cydiainfouncover">GET</a></div>
+  <div class="get"><a style="background: red;"href="https://is.gd/Cydiainfovideostarr">GET</a></div>
 </li>
 <li class="li">
   <img src="img/videostarpro.png">
