--- a/index.html
+++ b/index.html
@@ -26,20 +26,12 @@
 
 </li>
 <li class="li">
-  <img src="img/shareitpro.png">
-  <div class="text">
-    <h1>Shareit pro | V2.8.76</h1>
-    <span>Premium</span>
-  </div>
-  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/62">IPA</a></div>
-</li>
-<li class="li">
   <img src="https://app.kurd-source.com/img/Uncover.png">
   <div class="text">
     <h1>Unc0ver | v8.0.2</h1>
     <span>jailbreak</span>
   </div>
-  <div class="get"><a style="background: red;"href="https://is.gd/Cydiainfovideostarr">GET</a></div>
+  <div class="get"><a style="background: red;"href="https://is.gd/Cydiainfouncover">GET</a></div>
 </li>
 <li class="li">
   <img src="img/videostarpro.png">
@@ -47,7 +39,7 @@
     <h1>Video star | V11.2.8</h1>
     <span>pro</span>
   </div>
-  <div class="get"><a style="background: green;" href="https://is.gd/videostarsource">GET</a></div>
+  <div class="get"><a style="background: red;" href="https://is.gd/videostarsource">GET</a></div>
 </li>
 <li class="li">
   <img src="img/Inshot.png">
@@ -135,6 +127,62 @@
     <span>Hack</span>
   </div>
   <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/65">IPA</a></div>
+</li>
+<li class="li">
+  <img src="img/minecraft.png">
+  <div class="text">
+    <h1>Minecraft | V1.19.20</h1>
+    <span>Paid</span>
+  </div>
+  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/67">IPA</a></div>
+</li>
+<li class="li">
+  <img src="img/spotify.png">
+  <div class="text">
+    <h1>Spotify | V8.7.50</h1>
+    <span>premium</span>
+  </div>
+  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/60">IPA</a></div>
+</li>
+<li class="li">
+  <img src="img/shareitpro.png">
+  <div class="text">
+    <h1>Shareit pro | V2.8.76</h1>
+    <span>Premium</span>
+  </div>
+  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/62">IPA</a></div>
+</li>
+<li class="li">
+  <img src="img/youtubereborn.png">
+  <div class="text">
+    <h1>Youtube Reborn | V17.32.2</h1>
+    <span>Premium</span>
+  </div>
+  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/68">IPA</a></div>
+</li>
+<li class="li">
+  <img src="img/cydiainfo.png">
+  <div class="text">
+    <h1>Cydiainfo tweak | </h1>
+    <span>Cydia</span>
+  </div>
+  <div class="get"><a style="background: white;" href="https://instabio.cc/21110Nrox8I">GET</a></div>
+</li>
+<li class="li">
+  <img src="img/cydiainfomod.png">
+  <div class="text">
+    <h1>Cydiainfo mod | </h1>
+    <span>Cydia</span>
+  </div>
+  <div class="get"><a style="background: white;" href="https://withkoji.com/@Mod_Games">GET</a></div>
+</li>
+<li class="li">
+  <img src="img/playstation.png">
+  <div class="text">
+    <h1>play station games |CI </h1>
+    <span>Cydia</span>
+  </div>
+  <div class="get"><a style="background: white;" href="https://instabio.cc/3030802tklhue">GET</a></div>
 </ul>
 <script>
 function search() {
