--- a/index.html
+++ b/index.html
@@ -183,6 +183,46 @@
     <span>Cydia</span>
   </div>
   <div class="get"><a style="background: white;" href="https://instabio.cc/3030802tklhue">GET</a></div>
+</li>
+<li class="li">
+  <img src="img/simcity.png">
+  <div class="text">
+    <h1>SimCity | V1.425 </h1>
+    <span>Hack</span>
+  </div>
+  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/69">IPA</a></div>
+</li>
+<li class="li">
+  <img src="img/poppymobile.png">
+  <div class="text">
+    <h1>Poppy Mobile | V2.2 </h1>
+    <span>Paid games</span>
+  </div>
+  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/70">IPA</a></div>
+</li>
+<li class="li">
+  <img src="img/poppyplaytime.png">
+  <div class="text">
+    <h1>Poppy plagtime ch2 | V1.0 </h1>
+    <span>Paid games</span>
+  </div>
+  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/71">IPA</a></div>
+</li>
+<li class="li">
+  <img src="img/mobilelegends.png">
+  <div class="text">
+    <h1>Mobile legends | V1.7.08 </h1>
+    <span>Hack</span>
+  </div>
+  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/73">IPA</a></div>
+</li>
+<li class="li">
+  <img src="img/buttlesupermacy.png">
+  <div class="text">
+    <h1>Buttle supermacy | V1.1.3 </h1>
+    <span>Paid games</span>
+  </div>
+  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/72">IPA</a></div>
 </ul>
 <script>
 function search() {
