--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 <li class="li">
   <img src="img/poppyplaytime.png">
   <div class="text">
-    <h1>Poppy plagtime ch2 | V1.0 </h1>
+    <h1>Poppy playtime ch2 | V1.0 </h1>
     <span>Paid games</span>
   </div>
   <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/71">IPA</a></div>
