--- a/index.html
+++ b/index.html
@@ -223,6 +223,14 @@
     <span>Paid games</span>
   </div>
   <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/72">IPA</a></div>
+</li>
+<li class="li">
+  <img src="img/carxdrif.png">
+  <div class="text">
+    <h1>Car x Drift | V1.21.1</h1>
+    <span>Hack</span>
+  </div>
+  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/74">IPA</a></div>
 </ul>
 <script>
 function search() {
