--- a/index.html
+++ b/index.html
@@ -240,6 +240,39 @@
     <span>Install ipa</span>
   </div>
   <div class="get"><a style="background: white;" href="https://archive.org/download/esign-4.4.9-unsign_202208/ESign_4.4.9_unsign.ipa">IPA</a></div>
+
+</li>
+<li class="li">
+  <img src="img/fnaf.png">
+  <div class="text">
+    <h1>Fnaf | V2.0.3</h1>
+    <span>Paid games</span>
+  </div>
+  <div class="get"><a style="background: white;" href="https://archive.org/download/fnaf-2.0.3/FNAF%20%282.0.3%29.ipa">IPA</a></div>
+</li>
+<li class="li">
+  <img src="img/fnaf2.png">
+  <div class="text">
+    <h1>Fnaf 2 | V2.0.4</h1>
+    <span>Paid games</span>
+  </div>
+  <div class="get"><a style="background: white;" href="https://archive.org/download/fnaf-2-2.0.4/FNAF%202%20%282.0.4%29.ipa">IPA</a></div>
+</li>
+<li class="li">
+  <img src="img/fnaf3.png">
+  <div class="text">
+    <h1>Fnaf 3 | V2.0.1</h1>
+    <span>Paid games</span>
+  </div>
+  <div class="get"><a style="background: white;" href="https://archive.org/download/fnaf-3-2.0.1/FNAF%203%20%282.0.1%29.ipa">IPA</a></div>
+</li>
+<li class="li">
+  <img src="img/fnaf4.png">
+  <div class="text">
+    <h1>Fnaf 4 | V2.0.4</h1>
+    <span>Paid games</span>
+  </div>
+  <div class="get"><a style="background: white;" href="https://archive.org/download/fnaf-4-2.0.1/FNAF%204%20%282.0.1%29.ipa">IPA</a></div>
 </ul>
 <script>
 function search() {
