--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <h1>Video star | V11.2.8</h1>
     <span>pro</span>
   </div>
-  <div class="get"><a style="background: red;" href="https://is.gd/videostarsource">GET</a></div>
+  <div class="get"><a style="background: green;" href="https://tweakdoor.com/store/videostar.html">GET</a></div>
 </li>
 <li class="li">
   <img src="img/Inshot.png">
