--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <center>
-<h1>BarhamIOS</h1>
+<div id="head"><h1 class="h1">BarhamIOS</h1></div>
 <div class="box">
 <input type="text" id="search-txt" onkeyup="search()" placeholder="Search...">
 <a class="sebtn" href="#">
@@ -24,7 +24,6 @@
 <br>
 <ul class="ul">
 
-</li>
 <li class="li">
   <img src="https://app.kurd-source.com/img/Uncover.png">
   <div class="text">
@@ -32,7 +31,8 @@
     <span>jailbreak</span>
   </div>
   <div class="get"><a style="background: red;"href="https://is.gd/Cydiainfouncover">GET</a></div>
-</li>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/videostarpro.png">
   <div class="text">
@@ -40,257 +40,268 @@
     <span>pro</span>
   </div>
   <div class="get"><a style="background: green;" href="itms-services://?action=download-manifest&url=https://cydiainfo.tk/videostar.plist">GET</a></div>
-</li>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/Inshot.png">
   <div class="text">
     <h1>Inshot | V1.61.1</h1>
     <span>Premium</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/4">IPA</a></div>
-</li>
+  <div class="get"><a href="https://t.me/BarhamIPA/4">IPA</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/maskgun.png">
   <div class="text">
     <h1>Maskgun | V3.303</h1>
     <span>Hack</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/51">IPA</a></div>
+  <div class="get"><a href="https://t.me/BarhamIPA/51">IPA</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/snakebricks.png">
   <div class="text">
     <h1>snake bricks | V1.3.3</h1>
     <span>Game Hacked</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/46">IPA</a></div>
-</li>
+  <div class="get"><a href="https://t.me/BarhamIPA/46">IPA</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/driftmaxpro.png">
   <div class="text">
     <h1>Drift max pro | V2.4.96</h1>
     <span>Hack</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/54">IPA</a></div>
-</li>
+  <div class="get"><a href="https://t.me/BarhamIPA/54">IPA</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/tiktok.png">
   <div class="text">
     <h1>Tiktok | V25.4.0</h1>
     <span>pro</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/55">IPA</a></div>
-</li>
+  <div class="get"><a href="https://t.me/BarhamIPA/55">IPA</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/bulletforce.png">
   <div class="text">
     <h1>Bullet Force | V1.89.0</h1>
     <span>Hack</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/56">IPA</a></div>
-</li>
+  <div class="get"><a href="https://t.me/BarhamIPA/56">IPA</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/lastday.png">
   <div class="text">
     <h1>Last Day | V1.19.4</h1>
     <span>Hack</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/57">IPA</a></div>
-</li>
+  <div class="get"><a href="https://t.me/BarhamIPA/57">IPA</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/artofwar.png">
   <div class="text">
     <h1>Art of war | V6.3.2</h1>
     <span>Hack</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/58">IPA</a></div>
-</li>
+  <div class="get"><a href="https://t.me/BarhamIPA/58">IPA</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/agario.png">
   <div class="text">
     <h1>Agar ios | V2.21.1</h1>
     <span>Hack</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/64">IPA</a></div>
-</li>
+  <div class="get"><a href="https://t.me/BarhamIPA/64">IPA</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/iCleanerpro.png">
   <div class="text">
     <h1>iCleaner pro | V1.0.4</h1>
     <span>pro</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/63">IPA</a></div>
-</li>
+  <div class="get"><a href="https://t.me/BarhamIPA/63">IPA</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/carxstreet.png">
   <div class="text">
     <h1>Car x street | V0.4.2</h1>
     <span>Hack</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/65">IPA</a></div>
-</li>
+  <div class="get"><a href="https://t.me/BarhamIPA/65">IPA</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/minecraft.png">
   <div class="text">
     <h1>Minecraft | V1.19.20</h1>
     <span>Paid</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/67">IPA</a></div>
-</li>
+  <div class="get"><a href="https://t.me/BarhamIPA/67">IPA</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/spotify.png">
   <div class="text">
     <h1>Spotify | V8.7.50</h1>
     <span>premium</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/60">IPA</a></div>
-</li>
+  <div class="get"><a href="https://t.me/BarhamIPA/60">IPA</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/shareitpro.png">
   <div class="text">
     <h1>Shareit pro | V2.8.76</h1>
     <span>Premium</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/62">IPA</a></div>
-</li>
+  <div class="get"><a href="https://t.me/BarhamIPA/62">IPA</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/youtubereborn.png">
   <div class="text">
     <h1>Youtube Reborn | V17.32.2</h1>
     <span>Premium</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/68">IPA</a></div>
-</li>
+  <div class="get"><a href="https://t.me/BarhamIPA/68">IPA</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/cydiainfo.png">
   <div class="text">
     <h1>Cydiainfo tweak | </h1>
     <span>Cydia</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://instabio.cc/21110Nrox8I">GET</a></div>
-</li>
+  <div class="get"><a href="https://instabio.cc/21110Nrox8I">GET</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/cydiainfomod.png">
   <div class="text">
     <h1>Cydiainfo mod | </h1>
     <span>Cydia</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://withkoji.com/@Mod_Games">GET</a></div>
-</li>
+  <div class="get"><a href="https://withkoji.com/@Mod_Games">GET</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/playstation.png">
   <div class="text">
     <h1>play station games |CI </h1>
     <span>Cydia</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://instabio.cc/3030802tklhue">GET</a></div>
-</li>
+  <div class="get"><a href="https://instabio.cc/3030802tklhue">GET</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/simcity.png">
   <div class="text">
     <h1>SimCity | V1.425 </h1>
     <span>Hack</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/69">IPA</a></div>
-</li>
+  <div class="get"><a href="https://t.me/BarhamIPA/69">IPA</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/poppymobile.png">
   <div class="text">
     <h1>Poppy Mobile | V2.2 </h1>
     <span>Paid games</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/70">IPA</a></div>
-</li>
+  <div class="get"><a href="https://t.me/BarhamIPA/70">IPA</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/poppyplaytime.png">
   <div class="text">
     <h1>Poppy playtime ch2 | V1.0 </h1>
     <span>Paid games</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/71">IPA</a></div>
-</li>
+  <div class="get"><a href="https://t.me/BarhamIPA/71">IPA</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/mobilelegends.png">
   <div class="text">
     <h1>Mobile legends | V1.7.08 </h1>
     <span>Hack</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/73">IPA</a></div>
-</li>
+  <div class="get"><a href="https://t.me/BarhamIPA/73">IPA</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/buttlesupermacy.png">
   <div class="text">
     <h1>Buttle supermacy | V1.1.3 </h1>
     <span>Paid games</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/72">IPA</a></div>
-</li>
+  <div class="get"><a href="https://t.me/BarhamIPA/72">IPA</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/carxdrif.png">
   <div class="text">
     <h1>Car x Drift | V1.21.1</h1>
     <span>Hack</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://t.me/BarhamIPA/74">IPA</a></div>
+  <div class="get"><a href="https://t.me/BarhamIPA/74">IPA</a></div>
+</li><div class="br"></div>
 
-</li>
 <li class="li">
   <img src="img/esign.png">
   <div class="text">
     <h1>ESign | V4.4.9</h1>
     <span>Install ipa</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://archive.org/download/esign-4.4.9-unsign_202208/ESign_4.4.9_unsign.ipa">IPA</a></div>
+  <div class="get"><a href="https://archive.org/download/esign-4.4.9-unsign_202208/ESign_4.4.9_unsign.ipa">IPA</a></div>
+</li><div class="br"></div>
 
-</li>
 <li class="li">
   <img src="img/fnaf.png">
   <div class="text">
     <h1>Fnaf | V2.0.3</h1>
     <span>Paid games</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://archive.org/download/fnaf-2.0.3/FNAF%20%282.0.3%29.ipa">IPA</a></div>
-</li>
+  <div class="get"><a href="https://archive.org/download/fnaf-2.0.3/FNAF%20%282.0.3%29.ipa">IPA</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/fnaf2.png">
   <div class="text">
     <h1>Fnaf 2 | V2.0.4</h1>
     <span>Paid games</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://archive.org/download/fnaf-2-2.0.4/FNAF%202%20%282.0.4%29.ipa">IPA</a></div>
-</li>
+  <div class="get"><a href="https://archive.org/download/fnaf-2-2.0.4/FNAF%202%20%282.0.4%29.ipa">IPA</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/fnaf3.png">
   <div class="text">
     <h1>Fnaf 3 | V2.0.1</h1>
     <span>Paid games</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://archive.org/download/fnaf-3-2.0.1/FNAF%203%20%282.0.1%29.ipa">IPA</a></div>
-</li>
+  <div class="get"><a href="https://archive.org/download/fnaf-3-2.0.1/FNAF%203%20%282.0.1%29.ipa">IPA</a></div>
+</li><div class="br"></div>
+
 <li class="li">
   <img src="img/fnaf4.png">
   <div class="text">
     <h1>Fnaf 4 | V2.0.4</h1>
     <span>Paid games</span>
   </div>
-  <div class="get"><a style="background: white;" href="https://archive.org/download/fnaf-4-2.0.1/FNAF%204%20%282.0.1%29.ipa">IPA</a></div>
+  <div class="get"><a href="https://archive.org/download/fnaf-4-2.0.1/FNAF%204%20%282.0.1%29.ipa">IPA</a></div>
 </ul>
-<script>
-function search() {
-
-  input = document.getElementById('search-txt');
-  filter = input.value.toUpperCase();
-  li = document.getElementsByClassName('li');
-
-  for (i = 0; i < li.length; i++) {
-    h1 = li[i].getElementsByTagName("h1")[0];
-    txtValue = h1.textContent || h1.innerText;
-    if (txtValue.toUpperCase().indexOf(filter) > -1) {
-      li[i].style.display = "";
-    } else {
-      li[i].style.display = "none";
-    }
-  }
-}
-</script>
+<script src="search.js"></script>
 </body>
 </html>
