--- a/index.html
+++ b/index.html
@@ -295,6 +295,15 @@
 </li><div class="br"></div>
 
 <li class="li">
+  <img src="img/quantumultx.png">
+  <div class="text">
+    <h1>Quantumult X | V1.0.31</h1>
+    <span>paid games</span>
+  </div>
+  <div class="get"><a href="https://archive.org/download/quantumult-x-1.0.31_202208/Quantumult%20X%20%281.0.31%29.ipa">IPA</a></div>
+</li><div class="br"></div>
+
+<li class="li">
   <img src="img/fnaf4.png">
   <div class="text">
     <h1>Fnaf 4 | V2.0.4</h1>
