--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h1>Apple id  | VIP</h1>
     <span>Apple id vip</span>
   </div>
-  <div class="get"><a href="https://archive.org/download/quantumult-x-1.0.31_202208/Quantumult%20X%20%281.0.31%29.ipa">GET</a></div>
+  <div class="get"><a href="#">GET</a></div>
 </li><div class="br"></div>
 
 <li class="li">
