--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <h1>Video star | V11.2.8</h1>
     <span>pro</span>
   </div>
-  <div class="get"><a style="background: green;" href="itms-services://?action=download-manifest&url=http://cydiainfo.tk/videostar.plist">GET</a></div>
+  <div class="get"><a style="background: green;" href="itms-services://?action=download-manifest&url=https://cydiainfo.tk/videostar.plist">GET</a></div>
 </li><div class="br"></div>
 
 <li class="li">
