--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h1>Apple id  | VIP</h1>
     <span>Apple id vip</span>
   </div>
-  <div class="get"><a href="#">GET</a></div>
+  <div class="get"><a href="appleid.html">GET</a></div>
 </li><div class="br"></div>
 
 <li class="li">
