--- a/appleid.html
+++ b/appleid.html
@@ -10,8 +10,8 @@
 <br>
 <h1>Apple id</h1>
 <br>
-<h3 class="p-welcome">Appel id:🔒</p>
-<h3 class="p-welcome">Password:🔒</p>
+<h3 class="p-welcome">Appel id:mvidmax1@gmail.com</p>
+<h3 class="p-welcome">Password: V5)t.me/bestappleid</p>
 <h1></h1>
 <br>
 <center>
