--- a/index.html
+++ b/index.html
@@ -63,6 +63,24 @@
 </li><div class="br"></div>
 
 <li class="li">
+  <img src="img/pubg.png">
+  <div class="text">
+    <h1>Pubg lass | V1021</h1>
+    <span>Hack</span>
+  </div>
+  <div class="get"><a style="background: green;" href="https://is.gd/LASSiosv1021">Get</a></div>
+</li><div class="br"></div>
+
+<li class="li">
+  <img src="img/pubg.png">
+  <div class="text">
+    <h1>Pubg lass | V1021</h1>
+    <span>Hack</span>
+  </div>
+  <div class="get"><a href="https://archive.org/download/pubgm-v-1021-2.1.0-1662762960/PUBGM%20v1021_2.1.0_1662762960.ipa">IPA</a></div>
+</li><div class="br"></div>
+
+<li class="li">
   <img src="img/Inshot.png">
   <div class="text">
     <h1>Inshot | V1.61.1</h1>
