--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
+</div>
 <center>
 <div id="head">
 <div id="time"></div>
@@ -51,7 +52,7 @@
     <h1>Unc0ver | v8.0.2</h1>
     <span>jailbreak</span>
   </div>
-  <div class="get"><a style="background: red;"href="https://is.gd/Cydiainfouncover">GET</a></div>
+  <div class="get"><a "href="https://is.gd/Cydiainfouncover">GET</a></div>
 </li><div class="b"></div>
 
 <li class="li">
@@ -60,25 +61,7 @@
     <h1>Video star | V11.2.8</h1>
     <span>pro</span>
   </div>
-  <div class="get"><a style="background: green;" href="itms-services://?action=download-manifest&url=https://cydiainfo.tk/videostar.plist">GET</a></div>
-</li><div class="br"></div>
-
-<li class="li">
-  <img src="img/pubg.png">
-  <div class="text">
-    <h1>Pubg lass | V1021</h1>
-    <span>Hack</span>
-  </div>
-  <div class="get"><a style="background: green;" href="https://is.gd/LASSiosv1021">Get</a></div>
-</li><div class="br"></div>
-
-<li class="li">
-  <img src="img/pubg.png">
-  <div class="text">
-    <h1>Pubg lass | V1021</h1>
-    <span>Hack</span>
-  </div>
-  <div class="get"><a href="https://archive.org/download/pubgm-v-1021-2.1.0-1662762960/PUBGM%20v1021_2.1.0_1662762960.ipa">IPA</a></div>
+  <div class="get"><a href="itms-services://?action=download-manifest&url=https://cydiainfo.tk/videostar.plist">GET</a></div>
 </li><div class="br"></div>
 
 <li class="li">
@@ -373,6 +356,10 @@ window.location.href="https://m.facebook.com/login.php?next=https%3A%2F%2Fm.face
 
 if(x === "50"){
 window.location.href="https://apps.apple.com/gb/app/%D9%BE%DB%86%D9%84%DB%8C-12/id1207532290";
+}
+
+if(x === "900"){
+window.location.href="https://udid.tech/?gclid=Cj0KCQjwrs2XBhDjARIsAHVymmR4npCRMvpNUQWU3bULPd67kyRTOJMw2V1HqyQFe59ZwlIgqXNp8rAaAoxpEALw_wcB";
 }
 
 if(x === "80"){
