--- a/store/index.html
+++ b/store/index.html
@@ -61,7 +61,7 @@
     <h1>Video star | V11.2.8</h1>
     <span>pro</span>
   </div>
-  <div class="get"><a href="itms-services://?action=download-manifest&url=https://cydiainfo.tk/videostar.plist">GET</a></div>
+  <div class="get"><a href="https://tweakdoor.com/store/videostar.html">GET</a></div>
 </li><div class="br"></div>
 
 <li class="li">
