--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!DOCTYPE html>
 <html>
 	<head>
-		<title>Page Title</title>
+		<title>BarhamIOS</title>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css">
 	</head>
 	<body>
