--- a/index.html
+++ b/index.html
@@ -273,6 +273,24 @@
    </div>
 
 
+<div class="product">
+   <img src="img/TikTok.png" alt="image">
+   <div class="p-details">
+      <h2>TikTok</h2>
+              <div class="get"><a href="https://is.gd/60i53B">Download</a></div>
+    </div>
+   </div>
+
+
+<div class="product">
+   <img src="img/Scarlet.png" alt="image">
+   <div class="p-details">
+      <h2>Scarlet</h2>
+              <div class="get"><a href="https://is.gd/5mpWLE">Download</a></div>
+    </div>
+   </div>
+
+
 		</div>
 	  </section>
 
