--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<img src="img/Videostarpro.png" alt="image">
 			<div class="p-details">
 			   <h2>Video star</h2>
-			  <div class="get"><a href="https://is.gd/JI3Vj3">Download</a></div>
+			  <div class="get"><a href="https://is.gd/BarhamIOS11">Download</a></div>
 			 </div>
 			</div>
           
