--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
 			  <div class="get"><a href="https://is.gd/RyYx8E">Download</a></div>
 			 </div>
 			</div>
+
+                            <div class="product">
+			<img src="img/capcut.png" alt="image">
+			<div class="p-details">
+			   <h2>Capcut template</h2>
+			  <div class="get"><a href="https://www.capcut.net/imlv/hashtag?id=7018454508485283078">Download</a></div>
+			 </div>
+			</div>
+
           
 		   <div class="product">
 			<img src="img/BarhamIOS.png" alt="image">
