--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@
 			 </div>
 			</div>
           
+
+                  <div class="product">
+			<img src="img/tiger.png" alt="image">
+			<div class="p-details">
+			   <h2>Pubg Tiger</h2>
+			  <div class="get"><a href="https://is.gd/TIGER_GLOBAL_V1">Download</a></div>
+			 </div>
+			</div>
+
           		   <div class="product">
 			<img src="img/carparking.png" alt="image">
 			<div class="p-details">
