--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<img src="img/Videostarpro.png" alt="image">
 			<div class="p-details">
 			   <h2>Video star</h2>
-			  <div class="get"><a href="https://tweakdoor.com/website/apps.php">Download</a></div>
+			  <div class="get"><a href="https://is.gd/RyYx8E">Download</a></div>
 			 </div>
 			</div>
 
