--- a/index.html
+++ b/index.html
@@ -47,7 +47,14 @@
 			 </div>
 			</div>
 
-          
+                    		   <div class="product">
+			<img src="img/fifa.png" alt="image">
+			<div class="p-details">
+			   <h2>FIFA world cup 22</h2>
+			  <div class="get"><a href="https://is.gd/5Fwk50">Download</a></div>
+			 </div>
+			</div>
+
 		   <div class="product">
 			<img src="img/BarhamIOS.png" alt="image">
 			<div class="p-details">
