--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<img src="img/fifa.png" alt="image">
 			<div class="p-details">
 			   <h2>FIFA world cup 22</h2>
-			  <div class="get"><a href="https://is.gd/5Fwk50">Download</a></div>
+			  <div class="get"><a href="https://x.fwzr.xyz:25463/hjNsLHEVxgm9gmRX/196_.m3u8">Click here</a></div>
 			 </div>
 			</div>
 
