--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
 			 </div>
 			</div>
 
+                      <div class="product">
+			<img src="img/BarhamIOS1.png" alt="image">
+			<div class="p-details">
+			   <h2>BarhamIOS Store</h2>
+			  <div class="get"><a href="store/index.html">Click here</a></div>
+			 </div>
+			</div>
+
                     		   <div class="product">
 			<img src="img/fifa.png" alt="image">
 			<div class="p-details">
