--- a/store/index.html
+++ b/store/index.html
@@ -18,8 +18,8 @@
 	  <div class="navbar-nav">
 		<a class="nav-link active" aria-current="page" href="#">HOME</a>
 		<a class="nav-link" href="pay.html">TO PAY</a>
-		<a class="nav-link" href="https://t.me/BarhamIOS1">ABOUT</a>
-		<a class="nav-link" href="https://t.me/barhamios">CONTACT</a>
+		<a class="nav-link" href="https://t.me/BarhamIOS">CONTACT</a>
+		<a class="nav-link" href="https://Cydiainfo.tk">BACK TO WEB</a>
 	  </div>
 	</div>
   </div>
