--- a/store/pay.html
+++ b/store/pay.html
@@ -18,8 +18,8 @@
 	  <div class="navbar-nav">
 		<a class="nav-link active" aria-current="page" href="index.html">HOME</a>
 		<a class="nav-link" href="#">TO PAY</a>
-		<a class="nav-link" href="https://t.me/BarhamIOS1">ABOUT</a>
-		<a class="nav-link" href="https://t.me/barhamios">CONTACT</a>
+		<a class="nav-link" href="https://t.me/BarhamIOS">CONTACT</a>
+		<a class="nav-link" href="https://Cydiainfo.tk">BACK TO WEB</a>
 	  </div>
 	</div>
   </div>
@@ -28,7 +28,7 @@
  			<div class="fast">
  			<h2>فاستپەی تەنها بۆ کرینی هاک دەبێت <br> Fastpay</h2>
 <h3>بۆ کرینی کۆد تەنها پارەکە بنێرەو رەسمی ناردنەکە بنێرەوە بۆ ئەدمینەکان راستەوخۆ کۆدت بۆ دێت</h3>
- 			<p>750 139 6103</p>
+ 			<p>ژمارە: ٠٧٥٠١٣٩٦١٠٣</p>
  			</div>
  			<div class="txt">
  			<p>BarhamIOS سوپاس بۆ هەڵبژاردنی  
