--- a/store/pay.html
+++ b/store/pay.html
@@ -28,7 +28,7 @@
  			<div class="fast">
  			<h2>فاستپەی تەنها بۆ کرینی هاک دەبێت <br> Fastpay</h2>
 <h3>بۆ کرینی کۆد تەنها پارەکە بنێرەو رەسمی ناردنەکە بنێرەوە بۆ ئەدمینەکان راستەوخۆ کۆدت بۆ دێت</h3>
- 			<p>ژمارە: ٠٧٥٠١٣٩٦١٠٣</p>
+ 			<p>ژمارە: 7501396103</p>
  			</div>
  			<div class="txt">
  			<p>BarhamIOS سوپاس بۆ هەڵبژاردنی  
