--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
 			 </div>
 			</div>
           
-          		   <div class="product">
-			<img src="img/flame.png" alt="image">
-			<div class="p-details">
-			   <h2>PUBG FLAME GL V44</h2>
-			  <div class="get"><a href="https://is.gd/v0i8Qg">Download</a></div>
-			 </div>
-			</div>
+          		 <div class="product">
+   <img src="img/gulf.png" alt="image">
+   <div class="p-details">
+      <h2>Pubg Mobile Gulf</h2>
+     <div class="get"><a href="itms-services://?action=download-manifest&url=https://ios-hack.netlify.app/plist/pubggulf.plist">Download</a></div>
+    </div>
+   </div>
           
 
                   <div class="product">
