--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
    <img src="img/gulf.png" alt="image">
    <div class="p-details">
       <h2>Pubg Mobile Gulf</h2>
-     <div class="get"><a href="itms-services://?action=download-manifest&url=https://ios-hack.netlify.app/plist/pubggulf.plist">Download</a></div>
+     <div class="get"><a href="itms-services://?action=download-manifest&url=https://ios-hack.netlify.app/plist/gulfgl.plist">Download</a></div>
     </div>
    </div>
           
