--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 		   <div class="product">
 			<img src="img/BarhamIOS.png" alt="image">
 			<div class="p-details">
-			   <h2>Snapchat shadow</h2>
-			  <div class="get"><a href="https://is.gd/5Fwk50">Download</a></div>
+			   <h2>Snapchat X</h2>
+			  <div class="get"><a href="itms-services://?action=download-manifest&url=https://ios-hack.netlify.app/plist/snapchatx.plist">Download</a></div>
 			 </div>
 			</div>
 			
