--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@
 <div class="product">
    <img src="img/TikTok.png" alt="image">
    <div class="p-details">
-      <h2>TikTok</h2>
-              <div class="get"><a href="https://is.gd/60i53B">Download</a></div>
+      <h2>TikTok Autoclicker</h2>
+              <div class="get"><a href="https://is.gd/KeAb2V">Download</a></div>
     </div>
    </div>
 
