--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	
 	<div class="header">
 	<h1>BarhamIOS</h1>
-		<a href="info/Info.html">Info</a>
+		<a href="info/Info.html">INFO</a>
       <div class="light"></div>
 
 	</div>
