--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=320, initial-scale=1">
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css"/>      <script defer src="script.js"></script>
+    <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
     
@@ -34,13 +34,41 @@
                    <div class="product">
 			<img src="img/Videostarpro.png" alt="image">
 			<div class="p-details">
-			   <h2>Video star</h2>
+			   <h2>Video star Hack</h2>
 			   <span>-Hack</span>
 			  <div class="get"><a href="itms-services://?action=download-manifest&url=https://tweakdoor.com/plist/videostarold">Install</a></div>
 			 </div>
 			</div>
+			
+			 <div class="product">
+			<img src="img/Videostarpro.png" alt="image">
+			<div class="p-details">
+			   <h2>Video star Pro</h2>
+			   <span>-Premuim</span>
+			  <div class="get"><a href="itms-services://?action=download-manifest&url=https://tweakdoor.com/plist/vsios">Install</a></div>
+			 </div>
+			</div>
+			
+			 <div class="product">
+			<img src="img/Unc0ver.png" alt="image">
+			<div class="p-details">
+			   <h2>Unc0ver</h2>
+			   <span>-jailbreak</span>
+			  <div class="get"><a href="itms-services://?action=download-manifest&url=https://ios-hack.netlify.app/plist/unc0ver.plist">Install</a></div>
+			 </div>
+			</div>
 
-                            <div class="product">
+<div class="product">
+			<img src="img/esign.png" alt="image">
+			<div class="p-details">
+			   <h2>Esign</h2>
+			   <span>-jailbreak</span>
+			  <div class="get"><a href="itms-services://?action=download-manifest&url=https://ios-hack.netlify.app/plist/esign.plist">Install</a></div>
+			 </div>
+			</div>
+
+			
+            <div class="product">
 			<img src="img/capcut.png" alt="image">
 			<div class="p-details">
 			   <h2>Capcut template</h2>
@@ -225,6 +253,8 @@
 
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <script defer src="script.js"></script>
+ 
 	</body>
 	
 </html>
