--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<img src="img/esign.png" alt="image">
 			<div class="p-details">
 			   <h2>Esign</h2>
-			   <span>-jailbreak</span>
+			   <span>-IPA INSTALL</span>
 			  <div class="get"><a href="itms-services://?action=download-manifest&url=https://ios-hack.netlify.app/plist/esign.plist">Install</a></div>
 			 </div>
 			</div>
@@ -75,16 +75,7 @@
 			 </div>
 			</div>
 			
-                  <div class="product">
-			<img src="img/esign.png" alt="image">
-			<div class="p-details">
-			   <h2>Esign</h2>
-			    <span>-IPA Install</span>
-			  <div class="get"><a href="https://is.gd/wFwdzO">Install</a></div>
-			 </div>
-			</div>
-          
-          		 <div class="product">
+			    <div class="product">
    <img src="img/gulf.png" alt="image">
    <div class="p-details">
       <h2>Pubg Mobile Free</h2>
