--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 	<div class="header">
 	<h1>BarhamIOS</h1>
 		<a href="info/Info.html">INFO</a>
-      <div class="light"></div>
+      <div class="light">
+        Server doesn't work
+        </div>
 
 	</div>
 	
@@ -32,7 +34,7 @@
 		<div class="product-list">
 		
                    <div class="product">
-			<img src="img/Videostarpro.png" alt="image">
+			<img src="img/Vsios.png" alt="image">
 			<div class="p-details">
 			   <h2>Video star Hack</h2>
 			   <span>-Hack</span>
@@ -67,7 +69,7 @@
 			 </div>
 			</div>
                   <div class="product">
-			<img src="img/BarhamIOS.png" alt="image">
+			<img src="img/Snap.png" alt="image">
 			<div class="p-details">
 			   <h2>Snapchat X</h2>
 			    <span>-Snap Shadow</span>
