--- a/info/Info.html
+++ b/info/Info.html
@@ -16,9 +16,9 @@
     <div class="container">
       
        <div class="header">
-      <h2>
+      <a href="https://cydiainfo.tk">
         BarhamIOS
-      </h2>
+      </a>
     </div>
       
       <div class="box" style="--clr: #89ec5b">
