--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<div class="header">
 	<h1>BarhamIOS</h1>
 		<a href="info/Info.html">INFO</a>
+		<a href="Short/index.html">Shortcut</a>
       <div class="light">
         Server doesn't work
         </div>
