--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<a href="info/Info.html">INFO</a>
 		<a href="Short/index.html">Shortcut</a>
       <div class="light">
-        Server doesn't work
+        Video star work now
         </div>
 
 	</div>
@@ -39,7 +39,7 @@
 			<div class="p-details">
 			   <h2>Video star Hack </h2>
 			   <span>-Hack</span>
-			  <div class="get"><a href="itms-services://?action=download-manifest&url=https://tweakdoor.com/plist/videostarold">Install</a></div>
+			  <div class="get"><a href="itms-services://?action=download-manifest&url=https://plist.tweakdoor.com/videostarold">Install</a></div>
 			 </div>
 			</div>
 			
@@ -48,7 +48,7 @@
 			<div class="p-details">
 			   <h2>Video star Pro</h2>
 			   <span>-Premuim</span>
-			  <div class="get"><a href="itms-services://?action=download-manifest&url=https://tweakdoor.com/plist/vsios">Install</a></div>
+			  <div class="get"><a href="itms-services://?action=download-manifest&url=https://plist.tweakdoor.com/vsios">Install</a></div>
 			 </div>
 			</div>
 			
