--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
          <img src="img/TikTok.png" alt="image">
            <div class="p-details">
              <h2>TikTok</h2>
-              <span>-Auto Clicker</span>
-              <div class="get"><a href="itmitms-services://?action=download-manifest&url=https://ios-hack.netlify.app/plist/tiktokautoclick.plist">Install</a></div>
+              <span>-TikTok Dark</span>
+              <div class="get"><a href="https://is.gd/qh2BOx">Install</a></div>
              </div>
             </div>
 
