--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<a href="info/Info.html">INFO</a>
 		<a href="Short/index.html">Shortcut</a>
       <div class="light">
-        Video star work now
+        Server doesn't work 
         </div>
 
 	</div>
